--- a/index.html
+++ b/index.html
@@ -1,52 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Newsletter sign-up form with success message</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>
+      Frontend Mentor | Newsletter sign-up form with success message
+    </title>
+  </head>
+  <body>
+    <!-- Sign-up form start -->
 
-  <!-- Sign-up form start -->
+    <main>
+      <div class="container">
+        <div class="form__container">
+          <h1>Stay updated!</h1>
+          <p>Join 60,000+ product managers receiving monthly updates on:</p>
+          <ul>
+            <li>Product discovery and building what matters</li>
+            <li>Measuring to ensure updates are a success</li>
+            <li>And much more!</li>
+          </ul>
+          <form>
+            <label for="email"> Email address </label>
+            <input type="text" id="email" placeholder="email@company.com" />
+            <button>Subscribe to monthly newsletter</button>
+          </form>
+        </div>
+        <div class="image__container">
+          <img
+            class="image__desktop"
+            src="assets/images/illustration-sign-up-desktop.svg"
+            alt="desktop image ui"
+          />
+          <img
+            class="image__mobile"
+            src="assets/images/illustration-sign-up-mobile.svg"
+            alt="mobile image ui"
+          />
+        </div>
+      </div>
+    </main>
 
-  Stay updated!
+    <!-- Sign-up form end -->
 
-  Join 60,000+ product managers receiving monthly updates on:
+    <!-- Success message start -->
 
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
+    <div class="modal">
+      <div class="modal__container">
+        <h2>Thanks for subscribing!</h2>
+        <p>
+          A confirmation email has been sent to
+          <output id="user__email"></output>. Please open it and click the
+          button inside to confirm your subscription.
+        </p>
+        <button class="modal__close">Dismiss message</button>
+      </div>
+    </div>
 
-  Email address
-  email@company.com
-
-  Subscribe to monthly newsletter
-
-  <!-- Sign-up form end -->
-
-  <!-- Success message start -->
-
-  Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-
-  <!-- Success message end -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <!-- Success message end -->
+  </body>
 </html>
