add google fonts and stylesheet

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
       href="./assets/images/favicon-32x32.png"
     />
 
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="style.css" />
     <title>
       Frontend Mentor | Newsletter sign-up form with success message
     </title>
